--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <h3>What context, community or niche is it primarily aimed at and what indicates this?</h3>
 <p>The primary target for Orb farm is gamers that are usually interested in sandbox simulations. Orb.Farm will appeal to fans of sandbox simulations because it offers a highly interactive, open-ended environment where players can experiment, observe, and shape their own virtual ecosystem. Another group will be people interested in environmental science. because it allows players to explore interactively real-world environmental principles in virtual ecosystem.</p>
 <h3>What did you find annoying and/or boring about interacting with it?</h3>
-<p>Aspects that make the game feel limiting or frustrating, would be the lack of visuals to track data such as oxygen levels, population trends, or nutrient cycles, making it difficult understand how to manage the ecosystem. </p>
+<p>Aspects that make the game feel limiting or frustrating, would be the lack of visuals to track data such as oxygen levels, population trends, or nutrient cycles, making it difficult understand how to manage the ecosystem. yyy </p>
         </body>
    
 </html>
